--- a/App.config
+++ b/App.config
@@ -18,61 +18,61 @@
     <!-- Settings for S1 -->
     <add key="S1Enable" value="true"/>
     <add key="S1Name" value="S1"/>
-    <add key="S1Color" value="Color.Red"/>
+    <add key="S1Color" value="Red"/>
     <add key="S1Y2" value="false"/>
 
     <!-- Settings for S2 -->
     <add key="S2Enable" value="true"/>
     <add key="S2Name" value="S2"/>
-    <add key="S2Color" value="Color.Blue"/>
+    <add key="S2Color" value="Blue"/>
     <add key="S2Y2" value="false"/>
 
     <!-- Settings for S3 -->
     <add key="S3Enable" value="false"/>
     <add key="S3Name" value="S3"/>
-    <add key="S3Color" value="Color.Green"/>
+    <add key="S3Color" value="Green"/>
     <add key="S3Y2" value="false"/>
 
     <!-- Settings for S4 -->
     <add key="S4Enable" value="false"/>
     <add key="S4Name" value="S4"/>
-    <add key="S4Color" value="Color.Orange"/>
+    <add key="S4Color" value="Orange"/>
     <add key="S4Y2" value="false"/>
 
     <!-- Settings for S5 -->
     <add key="S5Enable" value="false"/>
     <add key="S5Name" value="S5"/>
-    <add key="S5Color" value="Color.Pink"/>
+    <add key="S5Color" value="Pink"/>
     <add key="S5Y2" value="false"/>
 
     <!-- Settings for S6 -->
     <add key="S6Enable" value="false"/>
     <add key="S6Name" value="S6"/>
-    <add key="S6Color" value="Color.Yellow"/>
+    <add key="S6Color" value="Yellow"/>
     <add key="S6Y2" value="false"/>
 
     <!-- Settings for S7 -->
     <add key="S7Enable" value="false"/>
     <add key="S7Name" value="S7"/>
-    <add key="S7Color" value="Color.Black"/>
+    <add key="S7Color" value="Black"/>
     <add key="S7Y2" value="false"/>
 
     <!-- Settings for S8 -->
     <add key="S8Enable" value="false"/>
     <add key="S8Name" value="S8"/>
-    <add key="S8Color" value="Color."/>
+    <add key="S8Color" value=""/>
     <add key="S8Y2" value="false"/>
 
     <!-- Settings for S9 -->
     <add key="S9Enable" value="false"/>
     <add key="S9Name" value="S9"/>
-    <add key="S9Color" value="Color."/>
+    <add key="S9Color" value=""/>
     <add key="S9Y2" value="false"/>
 
     <!-- Settings for S10 -->
     <add key="S10Enable" value="false"/>
     <add key="S10Name" value="S10"/>
-    <add key="S10olor" value="Color."/>
+    <add key="S10olor" value=""/>
     <add key="S10Y2" value="false"/>
   </appSettings>
 </configuration>
