--- a/SvVis3.csproj
+++ b/SvVis3.csproj
@@ -58,6 +58,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DotNetSvExtensions.cs" />
+    <Compile Include="SingleShotSetVals.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SingleShotSetVals.Designer.cs">
+      <DependentUpon>SingleShotSetVals.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProtocolHandler.cs" />
     <Compile Include="VisForm3.cs">
       <SubType>Form</SubType>
@@ -67,6 +73,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="SingleShotSetVals.resx">
+      <DependentUpon>SingleShotSetVals.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VisForm3.resx">
       <SubType>Designer</SubType>
       <DependentUpon>VisForm3.cs</DependentUpon>
