Implement Save As *.CSV

--- a/App.config
+++ b/App.config
@@ -70,9 +70,9 @@
     <add key="S9Y2" value="false"/>
 
     <!-- Settings for S10 -->
-    <add key="S10Enable" value="false"/>
-    <add key="S10Name" value="S10"/>
-    <add key="S10olor" value=""/>
+    <add key="S10Enable" value="true"/>
+    <add key="S10Name" value="Trigger"/>
+    <add key="S10Color" value="Green"/>
     <add key="S10Y2" value="false"/>
   </appSettings>
 </configuration>
