Added dynamic X-Axis

--- a/App.config
+++ b/App.config
@@ -60,13 +60,13 @@
     <!-- Settings for S8 -->
     <add key="S8Enable" value="false"/>
     <add key="S8Name" value="S8"/>
-    <add key="S8Color" value=""/>
+    <add key="S8Color" value="Black"/>
     <add key="S8Y2" value="false"/>
 
     <!-- Settings for S9 -->
     <add key="S9Enable" value="false"/>
     <add key="S9Name" value="S9"/>
-    <add key="S9Color" value=""/>
+    <add key="S9Color" value="Black"/>
     <add key="S9Y2" value="false"/>
 
     <!-- Settings for S10 -->
