--- a/App.config
+++ b/App.config
@@ -3,76 +3,76 @@
   <appSettings>
     <!-- Scale Settings-->
     <!-- X-Axis-->
-    <add key="Xmin" yValue="0"/>
-    <add key="Xmax" yValue="21"/>
+    <add key="Xmin" value="0"/>
+    <add key="Xmax" value="21"/>
 
     <!-- Y1-Axis-->
-    <add key="Y1min" yValue="-100"/>
-    <add key="Y1max" yValue="100"/>
+    <add key="Y1min" value="-100"/>
+    <add key="Y1max" value="100"/>
 
     <!-- Y2-Axis-->
-    <add key="Y2min" yValue="-1000"/>
-    <add key="Y2max" yValue="1000"/>
+    <add key="Y2min" value="-1000"/>
+    <add key="Y2max" value="1000"/>
 
     <!-- Track Settings-->
     <!-- Settings for S1 -->
-    <add key="S1Enable" yValue="true"/>
-    <add key="S1Name" yValue="S1"/>
-    <add key="S1Color" yValue="Red"/>
-    <add key="S1Y2" yValue="false"/>
+    <add key="S1Enable" value="true"/>
+    <add key="S1Name" value="S1"/>
+    <add key="S1Color" value="Red"/>
+    <add key="S1Y2" value="false"/>
 
     <!-- Settings for S2 -->
-    <add key="S2Enable" yValue="true"/>
-    <add key="S2Name" yValue="S2"/>
-    <add key="S2Color" yValue="Blue"/>
-    <add key="S2Y2" yValue="true"/>
+    <add key="S2Enable" value="true"/>
+    <add key="S2Name" value="S2"/>
+    <add key="S2Color" value="Blue"/>
+    <add key="S2Y2" value="true"/>
 
     <!-- Settings for S3 -->
-    <add key="S3Enable" yValue="true"/>
-    <add key="S3Name" yValue="S3"/>
-    <add key="S3Color" yValue="Green"/>
-    <add key="S3Y2" yValue="true"/>
+    <add key="S3Enable" value="true"/>
+    <add key="S3Name" value="S3"/>
+    <add key="S3Color" value="Green"/>
+    <add key="S3Y2" value="true"/>
 
     <!-- Settings for S4 -->
-    <add key="S4Enable" yValue="true"/>
-    <add key="S4Name" yValue="S4"/>
-    <add key="S4Color" yValue="Orange"/>
-    <add key="S4Y2" yValue="true"/>
+    <add key="S4Enable" value="true"/>
+    <add key="S4Name" value="S4"/>
+    <add key="S4Color" value="Orange"/>
+    <add key="S4Y2" value="true"/>
 
     <!-- Settings for S5 -->
-    <add key="S5Enable" yValue="false"/>
-    <add key="S5Name" yValue="S5"/>
-    <add key="S5Color" yValue="Pink"/>
-    <add key="S5Y2" yValue="false"/>
+    <add key="S5Enable" value="false"/>
+    <add key="S5Name" value="S5"/>
+    <add key="S5Color" value="Pink"/>
+    <add key="S5Y2" value="false"/>
 
     <!-- Settings for S6 -->
-    <add key="S6Enable" yValue="false"/>
-    <add key="S6Name" yValue="S6"/>
-    <add key="S6Color" yValue="Yellow"/>
-    <add key="S6Y2" yValue="false"/>
+    <add key="S6Enable" value="false"/>
+    <add key="S6Name" value="S6"/>
+    <add key="S6Color" value="Yellow"/>
+    <add key="S6Y2" value="false"/>
 
     <!-- Settings for S7 -->
-    <add key="S7Enable" yValue="false"/>
-    <add key="S7Name" yValue="S7"/>
-    <add key="S7Color" yValue="Black"/>
-    <add key="S7Y2" yValue="false"/>
+    <add key="S7Enable" value="false"/>
+    <add key="S7Name" value="S7"/>
+    <add key="S7Color" value="Black"/>
+    <add key="S7Y2" value="false"/>
 
     <!-- Settings for S8 -->
-    <add key="S8Enable" yValue="false"/>
-    <add key="S8Name" yValue="S8"/>
-    <add key="S8Color" yValue="Black"/>
-    <add key="S8Y2" yValue="false"/>
+    <add key="S8Enable" value="false"/>
+    <add key="S8Name" value="S8"/>
+    <add key="S8Color" value="Black"/>
+    <add key="S8Y2" value="false"/>
 
     <!-- Settings for S9 -->
-    <add key="S9Enable" yValue="false"/>
-    <add key="S9Name" yValue="S9"/>
-    <add key="S9Color" yValue="Black"/>
-    <add key="S9Y2" yValue="false"/>
+    <add key="S9Enable" value="false"/>
+    <add key="S9Name" value="S9"/>
+    <add key="S9Color" value="Black"/>
+    <add key="S9Y2" value="false"/>
 
     <!-- Settings for S10 -->
-    <add key="S10Enable" yValue="true"/>
-    <add key="S10Name" yValue="S10"/>
-    <add key="S10Color" yValue="Green"/>
-    <add key="S10Y2" yValue="false"/>
+    <add key="S10Enable" value="true"/>
+    <add key="S10Name" value="S10"/>
+    <add key="S10Color" value="Green"/>
+    <add key="S10Y2" value="false"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
