Fit settings for Universal Mover

--- a/App.config
+++ b/App.config
@@ -7,8 +7,8 @@
     <add key="Xmax" value="21"/>
 
     <!-- Y1-Axis-->
-    <add key="Y1min" value="-100"/>
-    <add key="Y1max" value="100"/>
+    <add key="Y1min" value="0"/>
+    <add key="Y1max" value="2500"/>
 
     <!-- Y2-Axis-->
     <add key="Y2min" value="-1000"/>
@@ -17,26 +17,26 @@
     <!-- Track Settings-->
     <!-- Settings for S1 -->
     <add key="S1Enable" value="true"/>
-    <add key="S1Name" value="S1"/>
+    <add key="S1Name" value="LA"/>
     <add key="S1Color" value="Red"/>
     <add key="S1Y2" value="false"/>
 
     <!-- Settings for S2 -->
     <add key="S2Enable" value="true"/>
-    <add key="S2Name" value="S2"/>
+    <add key="S2Name" value="LI"/>
     <add key="S2Color" value="Blue"/>
     <add key="S2Y2" value="false"/>
 
     <!-- Settings for S3 -->
-    <add key="S3Enable" value="false"/>
-    <add key="S3Name" value="S3"/>
+    <add key="S3Enable" value="true"/>
+    <add key="S3Name" value="RI"/>
     <add key="S3Color" value="Green"/>
     <add key="S3Y2" value="false"/>
 
     <!-- Settings for S4 -->
-    <add key="S4Enable" value="false"/>
-    <add key="S4Name" value="S4"/>
-    <add key="S4Color" value="Orange"/>
+    <add key="S4Enable" value="true"/>
+    <add key="S4Name" value="RA"/>
+    <add key="S4Color" value="Yellow"/>
     <add key="S4Y2" value="false"/>
 
     <!-- Settings for S5 -->
