--- a/App.config
+++ b/App.config
@@ -14,21 +14,21 @@
     <!-- Track Settings-->
     <!-- Settings for S1 -->
     <add key="S1Enable" value="true" />
-    <add key="S1Name" value="LA" />
+    <add key="S1Name" value="Left" />
     <add key="S1Color" value="Red" />
     <add key="S1Y2" value="false" />
     <!-- Settings for S2 -->
     <add key="S2Enable" value="true" />
-    <add key="S2Name" value="LI" />
+    <add key="S2Name" value="Right" />
     <add key="S2Color" value="Blue" />
     <add key="S2Y2" value="false" />
     <!-- Settings for S3 -->
-    <add key="S3Enable" value="true" />
+    <add key="S3Enable" value="false" />
     <add key="S3Name" value="RI" />
     <add key="S3Color" value="Green" />
     <add key="S3Y2" value="false" />
     <!-- Settings for S4 -->
-    <add key="S4Enable" value="true" />
+    <add key="S4Enable" value="false" />
     <add key="S4Name" value="RA" />
     <add key="S4Color" value="Yellow" />
     <add key="S4Y2" value="false" />
@@ -58,7 +58,7 @@
     <add key="S9Color" value="" />
     <add key="S9Y2" value="false" />
     <!-- Settings for S10 -->
-    <add key="S10Enable" value="true" />
+    <add key="S10Enable" value="false" />
     <add key="S10Name" value="Trigger" />
     <add key="S10Color" value="Green" />
     <add key="S10Y2" value="false" />
