--- a/SvVis3.csproj
+++ b/SvVis3.csproj
@@ -76,6 +76,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DotNetSvExtensions.cs" />
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
     <Compile Include="SingleShotSetVals.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ChooseCOM.resx">
       <DependentUpon>ChooseCOM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SingleShotSetVals.resx">
       <DependentUpon>SingleShotSetVals.cs</DependentUpon>
